# holthing

./: .gitignore  dune-project  note.md  test_example.ht  test_example2.ht  test_lt_gt.ht  test_type_param.ht  todo.md
lib/: absyn.ml  dune  holthing.ml  lexer.mll  parser.mly  proof.ml  semant.ml
test/: comprehensive_parser_test.ht  debug_alias.ht  debug_recursive.ht  debug_simple_variant.ht  debug_variants.ht  dune  test_basic.ht  test_constructors.ht  test_conv.ht  test_conv2.ht  test_conv3.ht  test_example.ht  test_features.ht  test_functions.ht  test_lambda.ht  test_only_variants.ht  test_proof.ht  test_recursive.ht  test_recursive_simple.ht  test_simple.ht  test_type_alias.ht
